{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "74911d4d-125e-4262-818f-cc2915e6a7c2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "32e385f9-a669-454d-9a2f-6991a1bdb90c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "d6706aba-f443-49af-a608-2ae1ac3e8072",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "758c9be6-ecec-439e-8478-3bcc8ef3a4c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeapon",
                    "type": "PassThrough",
                    "id": "eb92dd29-cdc7-4a76-8c29-95a1b3ae7e0e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Deploy",
                    "type": "Button",
                    "id": "bda281b0-33e2-4bdd-af9a-78807bfe6883",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeItem",
                    "type": "Button",
                    "id": "dbb80972-5b21-4e8e-9200-199422bc09f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5c96b127-4af4-4bb6-b3ac-f7d425c4b98e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4822c94b-0c0e-401a-a0e8-60aa57f07c13",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "002a4298-718e-45de-89b2-bc409b7ccfda",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "377a3bff-5b36-4b03-81ce-0813d5af507b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5b52244-d8ad-40cf-a99d-2a47e7c3feb9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e364b90-4178-46f5-a7dd-8e4e2bc795da",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41949828-a61f-4083-9a72-6a4422f1f5f7",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af509565-115c-473b-bde9-52f16af69b73",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deploy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d1be2a-a914-4e15-944d-388b10c55ed8",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OneWayPlatform",
            "id": "e81b8627-d48f-4d90-aa02-94928a8c844f",
            "actions": [
                {
                    "name": "Down",
                    "type": "Value",
                    "id": "44b14df8-9187-4c3a-936f-4fb22e0019e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "982fb63c-3d56-4257-99a7-fe9dcb7c4aa3",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "1e17ca0d-16e5-4643-920c-fcbd2b5350e7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "39ab9bc7-da94-47c1-bdc5-d44dcef3c515",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Gun",
            "id": "b722b6bd-5d87-4fe9-bdd8-9fc553a3a142",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "e0f0bd13-fc7d-4609-8a59-e5f8d7307eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aimming",
                    "type": "Value",
                    "id": "308f1a3d-90fd-4ab1-97a5-0234e54a1ca6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3deeda9-bb3d-4453-aa11-537e51d1fccb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d53fdde4-194f-4842-a30b-49a892416824",
                    "path": "<Mouse>/{Point}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aimming",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameManager",
            "id": "72c0ca69-d7f5-4f38-a061-c0c32f79a77e",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "aff46af2-1af7-4188-9533-e7bead383483",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cce2e7c0-e549-4554-b960-1fec3f2d2ce8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}